--- a/cafe2/index.html
+++ b/cafe2/index.html
@@ -1,104 +1,130 @@
 <html lang="es">
 <head>
+    <title>Merkuria Café - Sabor y Tradición</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre Merkuria Café, un café artesanal con sabores únicos.">
-    <meta property="og:title" content="Merkuria Café">
-    <meta property="og:description" content="Café artesanal con sabores clásicos y exóticos.">
-    <meta property="og:image" content="https://via.placeholder.com/1200x630">
+    <meta name="description" content="Descubre la esencia de Merkuria Café, donde la tradición se encuentra con el sabor. Prueba nuestros cafés únicos: clásico, chocolate, cajeta y pistache.">
+    <meta property="og:title" content="Merkuria Café - Sabor y Tradición">
+    <meta property="og:description" content="Descubre la esencia de Merkuria Café, donde la tradición se encuentra con el sabor.">
+    <meta property="og:image" content="https://via.placeholder.com/1200x630?text=Merkuria+Café">
     <meta property="og:url" content="https://merkuria-cafe.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Merkuria Café">
-    <meta name="twitter:description" content="Café artesanal con sabores únicos.">
-    <meta name="twitter:image" content="https://via.placeholder.com/1200x630">
+    <meta name="twitter:title" content="Merkuria Café - Sabor y Tradición">
+    <meta name="twitter:description" content="Descubre la esencia de Merkuria Café, donde la tradición se encuentra con el sabor.">
+    <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=Merkuria+Café">
     <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUA...">
-    <title>Merkuria Café</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body>
-    <header class="sticky top-0 z-10 bg-white bg-opacity-90 shadow-md">
-        <nav class="container mx-auto flex justify-between items-center p-4">
-            <div class="text-2xl font-bold text-color-primary">Merkuria Café</div>
+<body class="bg-bg-soft text-gray-800">
+    <header class="sticky top-0 bg-white shadow-md z-50">
+        <nav class="flex justify-between items-center p-4">
+            <div class="text-2xl font-bold">Merkuria Café</div>
             <div class="hidden md:flex space-x-4">
-                <a href="#hero" class="text-color-primary">Inicio</a>
-                <a href="#productos" class="text-color-primary">Productos</a>
-                <a href="#testimonios" class="text-color-primary">Testimonios</a>
-                <a href="#ubicacion" class="text-color-primary">Ubicación</a>
-                <a href="#contacto" class="bg-color-primary text-white px-4 py-2 rounded">Contáctanos</a>
+                <a href="#hero" class="text-gray-700 hover:text-gray-900">Inicio</a>
+                <a href="#productos" class="text-gray-700 hover:text-gray-900">Productos</a>
+                <a href="#testimonios" class="text-gray-700 hover:text-gray-900">Testimonios</a>
+                <a href="#contacto" class="text-gray-700 hover:text-gray-900">Contacto</a>
             </div>
-            <button id="menu-toggle" class="md:hidden text-color-primary">☰</button>
+            <button id="menu-toggle" class="md:hidden text-gray-700 focus:outline-none">☰</button>
         </nav>
+        <div id="mobile-menu" class="hidden md:hidden">
+            <a href="#hero" class="block p-2">Inicio</a>
+            <a href="#productos" class="block p-2">Productos</a>
+            <a href="#testimonios" class="block p-2">Testimonios</a>
+            <a href="#contacto" class="block p-2">Contacto</a>
+        </div>
     </header>
 
-    <main>
-        <section id="hero" class="gradient-bg text-white py-20 flex flex-col items-center">
-            <h1 class="text-5xl font-bold">Descubre el Sabor del Café Artesanal</h1>
-            <p class="mt-4 text-xl">Una experiencia única en cada sorbo.</p>
-            <div class="mt-6 space-x-4">
-                <a href="#productos" class="bg-white text-color-primary px-6 py-3 rounded">Ver Productos</a>
-                <a href="#contacto" class="bg-transparent border border-white px-6 py-3 rounded">Contáctanos</a>
-            </div>
-        </section>
+    <section id="hero" class="flex flex-col items-center justify-center h-screen bg-gradient-to-b from-gray-800 to-gray-600 text-white">
+        <h1 class="text-4xl md:text-5xl font-bold mb-2">Merkuria Café</h1>
+        <p class="text-lg mb-4">Donde la tradición se encuentra con el sabor.</p>
+        <div class="flex space-x-4">
+            <a href="#productos" class="bg-yellow-500 text-white px-4 py-2 rounded-lg">Ver Productos</a>
+            <a href="#contacto" class="bg-transparent border border-white text-white px-4 py-2 rounded-lg">Contáctanos</a>
+        </div>
+        <img src="https://via.placeholder.com/300?text=Café" alt="Café" class="mt-6 rounded-lg shadow-lg">
+    </section>
 
-        <section id="productos" class="container mx-auto py-20 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-            <div class="card p-6 bg-white">
+    <section id="productos" class="py-16 px-4">
+        <h2 class="text-3xl font-bold text-center mb-8">Nuestros Sabores</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="card p-4 bg-white">
                 <h3 class="text-xl font-semibold">Clásico</h3>
                 <p>Un sabor que nunca pasa de moda.</p>
+                <span class="bg-yellow-300 rounded-full px-2 py-1 text-sm">Sabor</span>
             </div>
-            <div class="card p-6 bg-white">
+            <div class="card p-4 bg-white">
                 <h3 class="text-xl font-semibold">Chocolate</h3>
-                <p>El placer del chocolate en tu café.</p>
+                <p>La dulzura del chocolate en cada sorbo.</p>
+                <span class="bg-yellow-300 rounded-full px-2 py-1 text-sm">Sabor</span>
             </div>
-            <div class="card p-6 bg-white">
+            <div class="card p-4 bg-white">
                 <h3 class="text-xl font-semibold">Cajeta</h3>
-                <p>Una dulce sorpresa en cada taza.</p>
+                <p>Un toque dulce y tradicional.</p>
+                <span class="bg-yellow-300 rounded-full px-2 py-1 text-sm">Sabor</span>
             </div>
-            <div class="card p-6 bg-white">
+            <div class="card p-4 bg-white">
                 <h3 class="text-xl font-semibold">Pistache</h3>
-                <p>Un toque exótico para los amantes del café.</p>
+                <p>Un sabor único que sorprenderá tu paladar.</p>
+                <span class="bg-yellow-300 rounded-full px-2 py-1 text-sm">Sabor</span>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="testimonios" class="bg-gray-100 py-20">
-            <div class="container mx-auto text-center">
-                <h2 class="text-3xl font-bold">Lo Que Dicen Nuestros Clientes</h2>
-                <p class="mt-4">"El mejor café que he probado!" - Juan</p>
-                <p class="mt-2">"Un sabor único y delicioso." - María</p>
-            </div>
-        </section>
+    <section id="testimonios" class="py-16 bg-gray-200">
+        <h2 class="text-3xl font-bold text-center mb-8">Lo Que Dicen Nuestros Clientes</h2>
+        <div class="max-w-4xl mx-auto">
+            <blockquote class="p-4 bg-white rounded-lg shadow-md mb-4">
+                <p>"El mejor café que he probado. ¡Definitivamente volveré!"</p>
+                <cite class="block text-right">- Ana Pérez</cite>
+            </blockquote>
+            <blockquote class="p-4 bg-white rounded-lg shadow-md mb-4">
+                <p>"Los sabores son únicos y la atención es excelente."</p>
+                <cite class="block text-right">- Juan López</cite>
+            </blockquote>
+        </div>
+    </section>
 
-        <section id="ubicacion" class="container mx-auto py-20">
-            <h2 class="text-3xl font-bold text-center">Ubicación y Horarios</h2>
-            <p class="text-center mt-4">Estamos en Calle del Café, 123, Ciudad.</p>
-            <p class="text-center">Lunes a Viernes: 8am - 6pm</p>
-            <a href="https://www.google.com/maps" class="block text-center mt-4 bg-color-primary text-white px-4 py-2 rounded">Ver en Mapa</a>
-        </section>
+    <section id="informacion" class="py-16 px-4">
+        <h2 class="text-3xl font-bold text-center mb-8">Información Clave</h2>
+        <div class="flex flex-col items-center">
+            <p class="mb-2">Ubicación: Calle Ficticia 123, Ciudad</p>
+            <p class="mb-2">Horarios: Lunes a Sábado, 8 AM - 8 PM</p>
+            <a href="https://maps.google.com" target="_blank" class="bg-yellow-500 text-white px-4 py-2 rounded-lg">Ver en Mapa</a>
+        </div>
+    </section>
 
-        <section id="contacto" class="container mx-auto py-20">
-            <h2 class="text-3xl font-bold text-center">Contáctanos</h2>
-            <form id="contact-form" class="mt-8">
-                <label for="name" class="block">Nombre:</label>
-                <input type="text" id="name" required class="border p-2 w-full mb-4" placeholder="Tu nombre">
-                <label for="email" class="block">Email:</label>
-                <input type="email" id="email" required class="border p-2 w-full mb-4" placeholder="Tu email">
-                <label for="message" class="block">Mensaje:</label>
-                <textarea id="message" required class="border p-2 w-full mb-4" placeholder="Tu mensaje"></textarea>
-                <button type="submit" class="bg-color-primary text-white px-4 py-2 rounded">Enviar</button>
-            </form>
-            <p id="form-message" class="mt-4 text-center hidden">¡Mensaje enviado con éxito!</p>
-        </section>
-    </main>
+    <section id="contacto" class="py-16 px-4">
+        <h2 class="text-3xl font-bold text-center mb-8">Contáctanos</h2>
+        <form id="contact-form" class="max-w-md mx-auto bg-white p-6 rounded-lg shadow-md">
+            <label for="nombre" class="block mb-2">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required class="w-full p-2 border border-gray-300 rounded mb-4">
+            <label for="email" class="block mb-2">Email:</label>
+            <input type="email" id="email" name="email" required class="w-full p-2 border border-gray-300 rounded mb-4">
+            <label for="consulta" class="block mb-2">Tipo de Consulta:</label>
+            <select id="consulta" name="consulta" class="w-full p-2 border border-gray-300 rounded mb-4">
+                <option value="general">Consulta General</option>
+                <option value="pedido">Pedido</option>
+                <option value="sugerencia">Sugerencia</option>
+            </select>
+            <label for="mensaje" class="block mb-2">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" required class="w-full p-2 border border-gray-300 rounded mb-4"></textarea>
+            <button type="submit" class="bg-yellow-500 text-white px-4 py-2 rounded-lg">Enviar</button>
+            <p id="form-message" class="mt-4 text-green-600 hidden">¡Mensaje enviado con éxito!</p>
+        </form>
+    </section>
 
-    <footer class="bg-gray-800 text-white py-4">
+    <footer class="py-8 bg-gray-800 text-white">
         <div class="container mx-auto text-center">
             <p>&copy; 2023 Merkuria Café. Todos los derechos reservados.</p>
-            <div class="flex justify-center space-x-4 mt-2">
+            <div class="flex justify-center space-x-4 mt-4">
                 <a href="#" class="text-white">Facebook</a>
                 <a href="#" class="text-white">Twitter</a>
                 <a href="#" class="text-white">Instagram</a>
             </div>
+            <a href="#hero" class="mt-4 inline-block text-yellow-500">Volver Arriba</a>
         </div>
     </footer>
 
